hphp/test/zend/good/ext/zlib/tests/002.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("zlib")) print "skip";
}
