hphp/test/zend/bad/ext/zlib/tests/bug_52944.php.skipif
<?php if (!extension_loaded("zlib")) print "skip"; ?>
<?php
if (PHP_OS == 'Darwin') {
	die("skip not for Darwin");
}